--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -8,9 +8,32 @@
     android:orientation="vertical">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
+        android:layout_weight="10"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"/>
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal">
+        <TextView
+            android:gravity="center"
+            android:textSize="30sp"
+            android:id="@+id/mode_state"
+            android:layout_margin="5dp"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:text=""
+            android:layout_height="match_parent"/>
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/switcher"
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:checked="false"/>
+    </LinearLayout>
 
 
     </LinearLayout>
